<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <Button
        android:id="@+id/btn_show_status_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/show_status_bar"
        android:textAllCaps="false"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toTopOf="@+id/btn_hide_status_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_hide_status_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/hide_status_bar"
        android:textAllCaps="false"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_show_status_bar" />

    <Button
        android:id="@+id/btn_show_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/show_navigation_bar"
        android:textAllCaps="false"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toTopOf="@+id/btn_hide_navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hide_status_bar" />

    <Button
        android:id="@+id/btn_hide_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/hide_navigation_bar"
        android:textAllCaps="false"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_system_bars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_navigation_bar" />

    <Button
        android:id="@+id/btn_show_system_bars"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/show_system_bars"
        android:textAllCaps="false"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toTopOf="@+id/btn_hide_system_bars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hide_navigation_bar" />

    <Button
        android:id="@+id/btn_hide_system_bars"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/hide_system_bars"
        android:textAllCaps="false"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_system_bars" />


</androidx.constraintlayout.widget.ConstraintLayout>