<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <Button
        android:id="@+id/btn_show_floating"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/show_floating_view"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toTopOf="@+id/btn_hide_floating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_hide_floating"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/hide_floating_view"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset_floating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_show_floating" />

    <Button
        android:id="@+id/btn_reset_floating"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/reset_floating_view"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hide_floating" />

</androidx.constraintlayout.widget.ConstraintLayout>