<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_keyboard_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_keyboard"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attachments_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="6dp"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_keyboard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/input_something"
            android:textColor="@color/textMainColor"
            android:textSize="@dimen/textNormalSize"
            android:hint="@string/input_something"
            android:inputType="text"
            android:autofillHints="@string/input_something" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btn_show_keyboard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/show_keyboard"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toTopOf="@+id/btn_hide_keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_keyboard" />

    <Button
        android:id="@+id/btn_hide_keyboard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/hide_keyboard"
        android:textColor="@color/textMainColor"
        android:textSize="@dimen/textNormalSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_keyboard" />
</androidx.constraintlayout.widget.ConstraintLayout>